chore: .gitignore, .env, .env-example created and refactoring docker-compose.yml file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     env_file:
       - .env
     ports:
-      - "${PORT_HOST}:8080"
+      - "${PORT}:${PORT}"
     container_name: vue
     image: vue:latest
     command: ["npm", "run", "serve"]
