--- a/docker/vue/Dockerfile
+++ b/docker/vue/Dockerfile
@@ -2,3 +2,9 @@ FROM node:14
 
 # install vue cli
 RUN npm install -g @vue/cli
+
+# creating a directory root to the project
+WORKDIR /app
+
+# copy all to the container
+COPY . .
