--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   vue:
     build:
       context: .
-      dockerfile: ./docker/vue/Dockerfile
+      dockerfile: ./.docker/node/Dockerfile
     volumes:
       - .:/app
     env_file:
